--- a/experiment_2/package.json
+++ b/experiment_2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "experiment_1",
+  "name": "experiment-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
-    "@mui/lab": "^7.0.1-beta.21",
     "@mui/material": "^7.3.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
